--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.2",
@@ -19,8 +20,9 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
-  "homepage": "https://www.julienpierlot.be/",
+  "homepage": "https://ju-pierlot.github.io/piradice/",
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
